--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,42 +1,182 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.app {
+  height: 100vh;
+  width: 100vw;
+  padding: 0 2rem 0 2rem;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.app-title {
+  margin: 1.6rem 0;
+  font-family: 'Geostar Fill';
+  font-size: 1.5rem;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.image-container {
+  width: 100%;
+  height: 100%;
+  margin-bottom: 1rem;
+  display: flex;
+  overflow: hidden;
+  flex-direction: column;
+  align-items: center;
+}
+
+.image-title {
+  margin-bottom: 0.5rem;
+  font-family: 'Oswald';
+}
+
+.image-link {
+  text-decoration: none;
+  color: black;
+}
+
+.image {
+  width: 100%;
+  height: 100%;
+  margin-bottom: 0.5rem;
+  object-fit: fill;
+  border: 1px solid transparent;
+  border-radius: 2%;
+}
+
+.image-click:hover {
+  color: darkblue;
+}
+
+.change-image-container {
+  margin-bottom: 1.6rem;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.change-image {
+  border: none;
+  background-color: transparent;
+  font-size: 2.5rem;
+  cursor: pointer;
+}
+
+.hidden {
+  display: none;
+}
+
+.change-image:hover {
+  color: darkslateblue;
+}
+
+.description-container {
+  margin-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+}
+
+.explanation {
+  font-size:16px;
+  font-family: 'Oswald';
+  margin-bottom: 0.8rem;
+  text-align: start;
+}
+
+.author {
+  font-family: 'Coustard';
+  margin-bottom: 0.5rem;
+  font-size: large;
+}
+
+.date {
+  font-style: oblique;
+}
+
+.footer {
+  width: 100vw;
+  height: 5rem;
+  padding-top: 0.3rem;
+  border-top: 1px solid gray;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center ;
+}
+
+.code-author {
+  margin-left: 2rem;
+  font-size: medium;
+}
+
+.heart {
+  height: 14px;
+  width: 14px;
+  color: red;
+}
+
+.icon-container {
+  margin-right: 2rem;
+}
+
+.icon {
+  height: 2rem;
+  width: 2rem;
+  color: black;
+}
+
+.linkedin {
+  margin-right: 12px;
+}
+
+@media (min-width: 557px) {
+  .app {
+    padding: 0 4rem 0 4rem;
   }
-  to {
-    transform: rotate(360deg);
+  .app-title {
+    font-size: 1.7rem;
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+@media (max-width: 557px) {
+  .app-title {
+    font-size: 1.3rem;
+  }
+  .image-title {
+    font-size: 1.3rem;
   }
 }
 
-.card {
-  padding: 2em;
+@media (min-width: 940px) {
+  .app {
+    padding: 0 8rem 0 8rem;
+  }
+  .app-title {
+    font-size: 2rem;
+  }
 }
 
-.read-the-docs {
-  color: #888;
+@media (min-width: 1132px) {
+  .app {
+    padding: 0 12rem 0 12rem;
+  }
+}
+
+@media (min-width: 1325px) {
+  .app {
+    padding: 0 16rem 0 16rem;
+  }
+}
+
+@media (min-width: 1517px) {
+  .app {
+    padding: 0 24rem 0 24rem;
+  }
+}
+
+@media (min-width: 1710px) {
+  .app {
+    padding: 0 28rem 0 28rem;
+  }
 }
