--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -42,7 +42,7 @@
   width: 100%;
   height: 100%;
   margin-bottom: 0.5rem;
-  object-fit: fill;
+  object-fit: cover;
   border: 1px solid transparent;
   border-radius: 2%;
 }
@@ -107,6 +107,7 @@
 .code-author {
   margin-left: 2rem;
   font-size: medium;
+  margin-bottom: 6px;
   color: aliceblue;
 }
 
@@ -155,6 +156,12 @@
   .app-title {
     font-size: 2rem;
   }
+  .code-author {
+    margin-left: 4rem;
+  }
+  .icon-container {
+    margin-right: 4rem;
+  }
 }
 
 @media (min-width: 1132px) {
@@ -166,6 +173,12 @@
 @media (min-width: 1325px) {
   .app {
     padding: 0 16rem 0 16rem;
+  }
+  .code-author {
+    margin-left: 8rem;
+  }
+  .icon-container {
+    margin-right: 8rem;
   }
 }
 
